# hercules-ci-effects

./: .gitignore  README.md  bors.toml  default.nix  flake-dev.nix  flake-docs-render.nix  flake-module.nix  flake-public-outputs.nix  flake.nix  options.xsl  overlay.nix
.github/: CODEOWNERS  pull_request_template.md
dev/: flake.nix
docs/: README.md  antora.yml
effects/: default.nix  lib-version-check.nix  mk-git-branch.nix  modules.nix  run-put-url.nix
effects/arion/: run-arion.nix
effects/cachix-deploy/: run-cachix-deploy.nix  test.nix
effects/cargo/: cargo-setup-hook.sh  default.nix  eval-test.nix  flake-module.nix  test-module-eval.nix
effects/cargo/test/: Cargo.toml  README.md  default.nix
effects/cargo/test-workspace/crate-b/: Cargo.toml
effects/cargo/test-workspace/crate-b/src/: lib.rs
effects/cloudflare-pages/: default.nix  flake-module.nix
effects/effect/: effect-module.nix  effect.nix  effects-setup-hook.sh  test.nix
effects/effect-vm-test/: default.nix  effects-module.nix  optimize.nix
effects/flake-update/: default.nix  effect-fun.nix  flake-module.nix  github-auto-merge.nix  test-module-eval.nix  test.nix
effects/gh-pages/: README.md  default.nix
effects/git-crypt-hook/: default.nix  git-crypt.sh  test.nix
effects/modules/: git.nix  (+4 more)
flake-modules/: derivationTree-type.nix  github-pages.nix  github-releases.nix  herculesCI-attribute.nix  herculesCI-eval-test.nix  herculesCI-helpers.nix  module-argument.nix  perSystem-effects.nix
lib/: mkHerculesCI-test.nix  mkHerculesCI.nix  testSupport.nix
nix/: ci.nix  flake-compat.nix
(+105 files in other folders)
