[package]
name = "hercules-ci-effects-test-crate-b"
version = "0.1.0"
edition = "2021"
description = "A dummy crate to test Hercules CI effects workspace publishing (dependent)"
license = "MIT"
repository = "https://github.com/hercules-ci/hercules-ci-effects"

[dependencies]
hercules-ci-effects-test-crate-a = { path = "../crate-a", version = "0.1.0" }
